--- a/.env copy
+++ b/.env copy
@@ -1,6 +1,6 @@
 MOTHERDUCK_TOKEN=
 AZURE_OPENAI_API_KEY =
 AZURE_OPENAI_ENDPOINT =
-AZURE_OPENAI_API_VERSION = 
+AZURE_OPENAI_API_VERSION = 2024-12-01-preview
 AZURE_OPENAI_DEPLOYMENT =gpt-4o-mini
 MD_DB_NAME=
