--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 openai>=1.40.0
 duckdb>=0.10.2
 python-dotenv>=1.0.0
-streamlit==1.25.0
+streamlit==1.39.0
 requests>=2.20.0
-altair==5.0.1
+altair==5.4.1
+pandas==2.2.3
