--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 openai>=1.40.0
-duckdb>=0.10.2
-python-dotenv>=1.0.0
+duckdb==0.10.2
+python-dotenv==1.0.0
 streamlit==1.39.0
 requests>=2.20.0
 altair==5.2
